@@ -1,5 +1,12 @@
 2008-06-14  Darin Adler  <darin@apple.com>
 
+        - more build fixing
+
+        * platform/gtk/DragDataGtk.cpp: Added missing header.
+        * platform/wx/DragDataWx.cpp: Ditto.
+
+2008-06-14  Darin Adler  <darin@apple.com>
+
         Reviewed by Sam.
 
         - fix https://bugs.webkit.org/show_bug.cgi?id=19544
